--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   </head>
   <body>
+    <img src="./lib/pics/bodyback.jpg" style="width:100%;height:100%"/>
     <div class="everything">
         <audio src="./lib/music/theme.mp3" autoplay id="theme"></audio>
         <audio src="./lib/music/battle.mp3" id="battle"></audio>
