Added play again button and fixed win lose screen rendering

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <button id="watergun" class="squirtle-attack">Water Gun</button>
         <button id="bite" class="squirtle-attack">Bite</button>
         <button id="waterpulse" class="squirtle-attack">Water Pulse</button>
+        <button id="play-again" class="replay">Play again?</button>
         <img src="./lib/pics/bulbasaurfront.gif" class="bulbasaur-front" />
         <img src="./lib/pics/bulbasaurback.gif" class="bulbasaur-back" />
         <img src="./lib/pics/charmanderfront.gif" class="charmander-front" />
