styled attack buttons

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
       </div>
 
       <div class="attacks">
-        <button id="scratch" class="charmander-attack">Scratch</button>
-        <button id="ember" class="charmander-attack">Ember</button>
-        <button id="firefang" class="charmander-attack">Fire Fang</button>
-        <button id="inferno" class="charmander-attack">Inferno</button>
+        <button id="scratch" class="charmander-attack">Scratch<br/>Damage: 40<br/>Accuracy: 100%</button>
+        <button id="ember" class="charmander-attack">Ember<br/>Damage: 40<br/>Accuracy: 100%</button>
+        <button id="firefang" class="charmander-attack">Fire Fang<br/>Damage: 65<br/>Accuracy: 95%</button>
+        <button id="inferno" class="charmander-attack">Inferno<br/>Damage: 100<br/>Accuracy: 50%</button>
 
-        <button id="tackle" class="bulbasaur-attack">Tackle</button>
-        <button id="vinewhip" class="bulbasaur-attack">Vine Whip</button>
-        <button id="takedown" class="bulbasaur-attack">Take Down</button>
-        <button id="razorleaf" class="bulbasaur-attack">Razor Leaf</button>
+        <button id="tackle" class="bulbasaur-attack">Tackle<br/>Damage: 50<br/>Accuracy: 100%</button>
+        <button id="vinewhip" class="bulbasaur-attack">Vine Whip<br/>Damage: 45<br/>Accuracy: 100%</button>
+        <button id="takedown" class="bulbasaur-attack">Take Down<br/>Damage: 90<br/>Accuracy: 85%</button>
+        <button id="razorleaf" class="bulbasaur-attack">Razor Leaf<br/>Damage: 55<br/>Accuracy: 95%</button>
 
-        <button id="tackle" class="squirtle-attack">Tackle</button>
-        <button id="watergun" class="squirtle-attack">Water Gun</button>
-        <button id="bite" class="squirtle-attack">Bite</button>
-        <button id="waterpulse" class="squirtle-attack">Water Pulse</button>
+        <button id="tackle" class="squirtle-attack">Tackle<br/>Damage: 50<br/>Accuracy: 100%</button>
+        <button id="watergun" class="squirtle-attack">Water Gun<br/>Damage: 40<br/>Accuracy: 100%</button>
+        <button id="bite" class="squirtle-attack">Bite<br/>Damage: 60<br/>Accuracy: 100%</button>
+        <button id="waterpulse" class="squirtle-attack">Water Pulse<br/>Damage: 60<br/>Accuracy: 100%</button>
         <button id="play-again" class="replay">Play again?</button>
         <img src="./lib/pics/bulbasaurfront.gif" class="bulbasaur-front" />
         <img src="./lib/pics/bulbasaurback.gif" class="bulbasaur-back" />
