--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </script>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   </head>
-  <body background="./lib/pics/gameboy.png">
+  <body background="./lib/pics/pokeback.png">
     <div class="everything">
       <button id="mute" class="mute"></button>
         <h3 class="logo">PokeBattleJS</h3>
