--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <button id="select-bulbasaur" class="select">bulbasaur</button>
         <button id="select-charmander" class="select">charmander</button>
         <button id="select-squirtle" class="select">squirtle</button>
+        <button id="select-pikachu" class="select">pikachu</button>
       </div>
 
       <div class="attacks">
@@ -57,6 +58,11 @@
         <button id="vinewhip" class="bulbasaur-attack">Vine Whip<br/>Damage: 45<br/>Accuracy: 100%</button>
         <button id="takedown" class="bulbasaur-attack">Take Down<br/>Damage: 90<br/>Accuracy: 85%</button>
         <button id="razorleaf" class="bulbasaur-attack">Razor Leaf<br/>Damage: 55<br/>Accuracy: 95%</button>
+        
+        <button id="thunderbolt" class="pikachu-attack">thunderbolt<br/>Damage: 80<br/>Accuracy: 100%</button>
+        <button id="flash" class="pikachu-attack">flash<br/>Damage: -10<br/>Accuracy: 100%</button>
+        <button id="thunder" class="pikachu-attack">thunder<br/>Damage: 1000<br/>Accuracy: 25%</button>
+        <button id="shadowball" class="pikachu-attack">shadowball<br/>Damage: 5000<br/>Accuracy: 100%</button>
 
         <button id="tackle" class="squirtle-attack">Tackle<br/>Damage: 50<br/>Accuracy: 100%</button>
         <button id="watergun" class="squirtle-attack">Water Gun<br/>Damage: 40<br/>Accuracy: 100%</button>
